WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255796
Bitmap-only layers sometimes get stuck with empty CG display lists
https://bugs.webkit.org/show_bug.cgi?id=255796
Summary
Bitmap-only layers sometimes get stuck with empty CG display lists
Tim Horton
Reported
2023-04-21 11:02:18 PDT
Bitmap-only layers sometimes get stuck with empty CG display lists
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-04-21 11:02:23 PDT
<
rdar://problem/108347964
>
Tim Horton
Comment 2
2023-04-21 11:04:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13040
EWS
Comment 3
2023-04-24 10:06:14 PDT
Committed
263317@main
(997b59a25b4c): <
https://commits.webkit.org/263317@main
> Reviewed commits have been landed. Closing PR #13040 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug