Bitmap-only layers sometimes get stuck with empty CG display lists https://bugs.webkit.org/show_bug.cgi?id=255796 rdar://108347964

Reviewed by Dean Jackson.

When a layer transitions from having a display list to not (e.g. a layer
/becomes/ bitmap-only), we need to actually clear the existing display list.
Also ensure that we turn off all of the related CALayer bits, not just the display list.
Also remove a stale workaround.

* Source/WebCore/platform/graphics/cocoa/WebCoreCALayerExtras.h:
* Source/WebCore/platform/graphics/cocoa/WebCoreCALayerExtras.mm:
(-[CALayer _web_clearContents]):
(-[CALayer _web_clearCGDisplayListIfNeeded]):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStoreProperties::applyBackingStoreToLayer):

Canonical link: https://commits.webkit.org/263317@main